versioned_docs/version-4.1.x/reference/functions/Set-ADTActiveSetup.mdx
---
id: Set-ADTActiveSetup
title: Set-ADTActiveSetup
hide_title: false
hide_table_of_contents: false
---

## SYNOPSIS

Creates an Active Setup entry in the registry to execute a file for each user upon login.

## SYNTAX

### Create (Default)

```powershell
Set-ADTActiveSetup -StubExePath <String> [-Arguments <String>] [-Wow6432Node]
 [-ExecutionPolicy <ExecutionPolicy>] [-Version <String>] [-Locale <String>] [-DisableActiveSetup] [-PassThru]
 [-WhatIf] [-Confirm] -Key <String> -Description <String> [<CommonParameters>]
```

### CreateNoExecute

```powershell
Set-ADTActiveSetup -StubExePath <String> [-Arguments <String>] [-Wow6432Node]
 [-ExecutionPolicy <ExecutionPolicy>] [-Version <String>] [-Locale <String>] [-DisableActiveSetup]
 [-NoExecuteForCurrentUser] [-WhatIf] [-Confirm] -Key <String> -Description <String> [<CommonParameters>]
```

### Purge

```powershell
Set-ADTActiveSetup [-Wow6432Node] [-PurgeActiveSetupKey] [-WhatIf] [-Confirm] -Key <String>
 [<CommonParameters>]
```

## DESCRIPTION

Active Setup allows handling of per-user changes registry/file changes upon login.

A registry key is created in the HKLM registry hive which gets replicated to the HKCU hive when a user logs in.

If the "Version" value of the Active Setup entry in HKLM is higher than the version value in HKCU, the file referenced in "StubPath" is executed.

This Function:

- Creates the registry entries in "HKLM:\SOFTWARE\Microsoft\Active Setup\Installed Components\$($adtSession.InstallName)".
- Creates StubPath value depending on the file extension of the $StubExePath parameter.
- Handles Version value with YYYYMMDDHHMMSS granularity to permit re-installs on the same day and still trigger Active Setup after Version increase.
- Copies/overwrites the StubPath file to $StubExePath destination path if file exists in 'Files' subdirectory of script directory.
- Executes the StubPath file for the current user based on $NoExecuteForCurrentUser (no need to logout/login to trigger Active Setup).

## EXAMPLES

### EXAMPLE 1

```powershell
Set-ADTActiveSetup -StubExePath 'C:\Users\Public\Company\ProgramUserConfig.vbs' -Arguments '/Silent' -Description 'Program User Config' -Key 'ProgramUserConfig' -Locale 'en'
```

### EXAMPLE 2

```powershell
Set-ADTActiveSetup -StubExePath "$envWinDir\regedit.exe" -Arguments "/S `"%SystemDrive%\Program Files (x86)\PS App Deploy\PSAppDeployHKCUSettings.reg`"" -Description 'PS App Deploy Config' -Key 'PS_App_Deploy_Config'
```

### EXAMPLE 3

```powershell
Set-ADTActiveSetup -Key 'ProgramUserConfig' -PurgeActiveSetupKey
```

Delete "ProgramUserConfig" active setup entry from all registry hives.

## PARAMETERS

### -StubExePath

Use this parameter to specify the destination path of the file that will be executed upon user login.

Note: Place the file you want users to execute in the '\Files' subdirectory of the script directory and the toolkit will install it to the path specificed in this parameter.

```yaml
Type: String
Parameter Sets: Create, CreateNoExecute
Aliases:

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -Arguments

Arguments to pass to the file being executed.

```yaml
Type: String
Parameter Sets: Create, CreateNoExecute
Aliases:

Required: False
Position: Named
Default value: [System.Management.Automation.Language.NullString]::Value
Accept pipeline input: False
Accept wildcard characters: False
```

### -Wow6432Node

Specify this switch to use Active Setup entry under Wow6432Node on a 64-bit OS.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### -ExecutionPolicy

Specifies the ExecutionPolicy to set when StubExePath is a PowerShell script.

```yaml
Type: ExecutionPolicy
Parameter Sets: Create, CreateNoExecute
Aliases:
Accepted values: Unrestricted, RemoteSigned, AllSigned, Restricted, Default, Bypass, Undefined

Required: False
Position: Named
Default value: (Get-ExecutionPolicy)
Accept pipeline input: False
Accept wildcard characters: False
```

### -Version

Optional.
Specify version for Active setup entry.
Active Setup is not triggered if Version value has more than 8 consecutive digits.
Use commas to get around this limitation.

Note:
    - Do not use this parameter if it is not necessary.
PSADT will handle this parameter automatically using the time of the installation as the version number.
    - In Windows 10, scripts and executables might be blocked by AppLocker.
Ensure that the path given to -StubExePath will permit end users to run scripts and executables unelevated.

```yaml
Type: String
Parameter Sets: Create, CreateNoExecute
Aliases:

Required: False
Position: Named
Default value: [System.DateTime]::Now.ToString('yyMM,ddHH,mmss')
Accept pipeline input: False
Accept wildcard characters: False
```

### -Locale

Optional.
Arbitrary string used to specify the installation language of the file being executed.
Not replicated to HKCU.

```yaml
Type: String
Parameter Sets: Create, CreateNoExecute
Aliases:

Required: False
Position: Named
Default value: [System.Management.Automation.Language.NullString]::Value
Accept pipeline input: False
Accept wildcard characters: False
```

### -DisableActiveSetup

Disables the Active Setup entry so that the StubPath file will not be executed.
This also enables -NoExecuteForCurrentUser.

```yaml
Type: SwitchParameter
Parameter Sets: Create, CreateNoExecute
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### -PurgeActiveSetupKey

Remove Active Setup entry from HKLM registry hive.
Will also load each logon user's HKCU registry hive to remove Active Setup entry.
Function returns after purging.

```yaml
Type: SwitchParameter
Parameter Sets: Purge
Aliases:

Required: True
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### -NoExecuteForCurrentUser

Specifies whether the StubExePath should be executed for the current user.
Since this user is already logged in, the user won't have the application started without logging out and logging back in.

```yaml
Type: SwitchParameter
Parameter Sets: CreateNoExecute
Aliases:

Required: True
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### -PassThru

Returns a ProcessResult from the execution of the ActiveSetup configuration for the current user if `-PassThru` is provided.

```yaml
Type: SwitchParameter
Parameter Sets: Create
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### -WhatIf

Shows what would happen if the cmdlet runs.
The cmdlet is not run.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases: wi

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -Confirm

Prompts you for confirmation before running the cmdlet.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases: cf

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -Description

Description for the Active Setup.
Users will see "Setting up personalized settings for: $Description" at logon.
Defaults to active session InstallName.

```yaml
Type: String
Parameter Sets: Create, CreateNoExecute
Aliases:

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -Key

Name of the registry key for the Active Setup entry.
Defaults to active session InstallName.

```yaml
Type: String
Parameter Sets: (All)
Aliases:

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### CommonParameters

This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see [about_CommonParameters](http://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

### None

### You cannot pipe objects to this function.
## OUTPUTS

### PSADT.ProcessManagement.ProcessResult

### This function returns a ProcessResult from the execution of the ActiveSetup configuration for the current user if `-PassThru` is provided.
## NOTES
An active ADT session is NOT required to use this function.

Original code borrowed from: Denis St-Pierre (Ottawa, Canada), Todd MacNaught (Ottawa, Canada)

This function supports the -WhatIf and -Confirm parameters for testing changes before applying them.

Tags: psadt<br />
Website: https://psappdeploytoolkit.com<br />
Copyright: (C) 2026 PSAppDeployToolkit Team (Sean Lillis, Dan Cunningham, Muhammad Mashwani, Mitch Richters, Dan Gough).<br />
License: https://opensource.org/license/lgpl-3-0

## RELATED LINKS

[https://psappdeploytoolkit.com/docs/reference/functions/Set-ADTActiveSetup](https://psappdeploytoolkit.com/docs/reference/functions/Set-ADTActiveSetup)
